force-app/main/default/objects/ServiceAppointment__c/ServiceAppointment__c.object-meta.xml
<CustomObject>
    <label>Service Appointment1</label>
    <nameField>
        <label>Service Appointment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Appointment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>