force-app/main/default/objects/ServiceAppointment__c/fields/Actual_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Actual_Duration_Minutes__c</fullName>
    <label>Actual Duration (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>