force-app/main/default/objects/ServiceAppointment__c/fields/Anonymous_Booking__c.field-meta.xml
<CustomField>
    <fullName>Anonymous_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anonymous Booking</label>
    <type>Checkbox</type>
</CustomField>