force-app/main/default/objects/ServiceAppointment__c/fields/Appointment_Booking_URL__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Booking_URL__c</fullName>
    <label>Appointment Booking URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>