force-app/main/default/objects/ServiceAppointment__c/fields/Appointment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Mode__c</fullName>
    <label>Booking Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Answer4U</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Facebook Chat</fullName>
            </value>
            <value>
                <fullName>Groupon</fullName>
            </value>
            <value>
                <fullName>Hair Calculator</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Self Generated</fullName>
            </value>
            <value>
                <fullName>TikTok</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>VFT Funnel</fullName>
            </value>
            <value>
                <fullName>B2B Referral</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>