force-app/main/default/objects/ServiceAppointment__c/fields/Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Type__c</fullName>
    <label>Appointment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>At Branch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>