force-app/main/default/objects/ServiceAppointment__c/fields/AppointmentNumber__c.field-meta.xml
<CustomField>
    <fullName>AppointmentNumber__c</fullName>
    <displayFormat>AN-{0000}</displayFormat>
    <label>Appointment Number</label>
    <type>AutoNumber</type>
</CustomField>