force-app/main/default/objects/ServiceAppointment__c/fields/Attendee_Limit__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Limit__c</fullName>
    <label>Attendee Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>