force-app/main/default/objects/ServiceAppointment__c/fields/AttendeeCount__c.field-meta.xml
<CustomField>
    <fullName>AttendeeCount__c</fullName>
    <label>Attendee Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>