force-app/main/default/objects/ServiceAppointment__c/fields/Booked_By__c.field-meta.xml
<CustomField>
    <fullName>Booked_By__c</fullName>
    <label>Booked By</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin Status</fullName>
            </value>
            <value>
                <fullName>Ajay</fullName>
            </value>
            <value>
                <fullName>Alex</fullName>
            </value>
            <value>
                <fullName>Buddy</fullName>
            </value>
            <value>
                <fullName>Dean</fullName>
            </value>
            <value>
                <fullName>Haitham</fullName>
            </value>
            <value>
                <fullName>Hakeem</fullName>
            </value>
            <value>
                <fullName>Harry</fullName>
            </value>
            <value>
                <fullName>HSHC</fullName>
            </value>
            <value>
                <fullName>Joel</fullName>
            </value>
            <value>
                <fullName>Mahmoud</fullName>
            </value>
            <value>
                <fullName>Matt F</fullName>
            </value>
            <value>
                <fullName>Rashid</fullName>
            </value>
            <value>
                <fullName>Sean</fullName>
            </value>
            <value>
                <fullName>Sulaiman</fullName>
            </value>
            <value>
                <fullName>Yaseen</fullName>
            </value>
            <value>
                <fullName>Yusaf</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>