force-app/main/default/objects/ServiceAppointment__c/fields/Duration_Type__c.field-meta.xml
<CustomField>
    <fullName>Duration_Type__c</fullName>
    <label>Duration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>