force-app/main/default/objects/ServiceAppointment__c/fields/Earliest_Start_Permitted__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Start_Permitted__c</fullName>
    <label>Earliest Start Permitted</label>
    <type>DateTime</type>
</CustomField>