force-app/main/default/objects/ServiceAppointment__c/fields/Group_Appointment_Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Group_Appointment_Access_Type__c</fullName>
    <label>Group Appointment Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>