force-app/main/default/objects/ServiceAppointment__c/fields/Lead_Stage_at_Booking__c.field-meta.xml
<CustomField>
    <fullName>Lead_Stage_at_Booking__c</fullName>
    <label>Lead Stage at Booking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>