force-app/main/default/objects/ServiceAppointment__c/fields/Offsite_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Offsite_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offsite Appointment</label>
    <type>Checkbox</type>
</CustomField>