force-app/main/default/objects/ServiceAppointment__c/fields/Parent_Record__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Record</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Service_Appointment</relationshipName>
    <type>Lookup</type>
</CustomField>