force-app/main/default/objects/ServiceAppointment__c/fields/Parent_Record_Status_Category__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record_Status_Category__c</fullName>
    <label>Parent Record Status Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>