force-app/main/default/objects/ServiceAppointment__c/fields/Scheduled_end_text__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_end_text__c</fullName>
    <label>Scheduled end text</label>
    <length>40</length>
    <type>Text</type>
</CustomField>