force-app/main/default/objects/ServiceAppointment__c/fields/Scheduled_start_text__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_start_text__c</fullName>
    <label>Scheduled start text</label>
    <length>40</length>
    <type>Text</type>
</CustomField>