force-app/main/default/objects/ServiceAppointment__c/fields/Service_Note__c.field-meta.xml
<CustomField>
    <fullName>Service_Note__c</fullName>
    <label>Service Note</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>