force-app/main/default/objects/ServiceAppointment__c/fields/Service_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource_Name__c</fullName>
    <label>Service Resource Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>