force-app/main/default/objects/ServiceAppointment__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <label>Transaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>