force-app/main/default/objects/ServiceAppointment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Actual_Duration_Minutes__c</columns>
    <columns>Actual_End__c</columns>
    <columns>Actual_Start__c</columns>
    <columns>Additional_Information__c</columns>
    <columns>Address__c</columns>
    <columns>Anonymous_Booking__c</columns>
    <columns>Appointment_Booking_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>